# mandelbrot

./: Cargo.toml  settings.txt
src/: main.rs
