[package]
name = "mandelbrot"
description = "Generates the mandelbrot set using arbitrary precision arithmetic"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
chrono = "0.4"
bevy = "0.12.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1
